tests/invalid/list_magic_len_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    n: int = xs.__len__(1)


if __name__ == "__main__":
    run_case()
